--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
 
-  <h1>日 記</h1>
+  <h1>日記</h1>
 
   <article>
     <h2>2025-01-01</h2>
     <p>
-     9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなない。お節にはあまり興味がないが、数の子だけは食べたいと思っている。近所のスーパーを回るが、1人では食べきれない量のものしか売っていない。オオゼキでで小さなパックに入ったものを見つけて、1,200円で買った。塩抜きが必要と書いてあって、ネットでやり方を調べた。歯の食いしばりのためにマウスピースをつけて寝ていて、それが無いと安心して寝れないぐらいなのだが、改善する方法が他にないかと思い、漢方を試してみることにした。夕方、新橋のアスティルへ。今年を振り返ったり、来年したいことを考えたりした。日記を書く場所を変えたいと思い始めて、いろいろ調べた。昨日と今日と明日が続いているような場所で書きたい。</p>
+      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなない。お節にはあまり興味がないが、数の子だけは食べたいと思っている。近所のスーパーを回るが、1人では食べきれない量のものしか売っていない。オオゼキで小さなパックに入ったものを見つけて、1,200円で買った。塩抜きが必要と書いてあって、ネットでやり方を調べた。歯の食いしばりのためにマウスピースをつけて寝ていて、それが無いと安心して寝れないぐらいなのだが、改善する方法が他にないかと思い、漢方を試してみることにした。夕方、新橋のアスティルへ。今年を振り返ったり、来年したいことを考えたりした。日記を書く場所を変えたいと思い始めて、いろいろ調べた。昨日と今日と明日が続いているような場所で書きたい。
+    </p>
   </article>
 
 </body>
