--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>日記</title>
- <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <h1>日記</h1>
+
   <article>
     <h2>2025-01-01</h2>
     <p>
