--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <article>
     <h2>2025-01-01</h2>
     <p>
-      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなない。お節にはあまり興味がないが、数の子だけは食べたいと思っている。
+      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなない。
     </p>
   </article>
 
@@ -24,6 +24,16 @@
       朝から雨だったので家で読書。午後は近所を散歩して、カフェでコーヒーを飲んだ。日が短いので夕方には暗くなるが、のんびりできた。
     </p>
   </article>
+
+  <!-- 日記記事3 -->
+  <article>
+    <h2>2025-01-03</h2>
+    <p>
+      午前中に買い物。昼食後に映画を観に行った。人が少なくて快適だった。夜は軽くジョギングして体を動かした。
+    </p>
+  </article>
+
+  <!-- ここにさらに <article> を追加して日記を書き足せます -->
 
 </body>
 </html>
