--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
 </head>
 <body>
 
-  <h1>日　記</h1>
+  <h1>日記</h1>
+
+  <!-- 目次 -->
+  <nav id="toc">
+    <h2>目次</h2>
+    <ul>
+      <li><a href="#d2025-01-01">2025-01-01</a></li>
+      <li><a href="#d2025-01-02">2025-01-02</a></li>
+      <li><a href="#d2025-01-03">2025-01-03</a></li>
+    </ul>
+  </nav>
 
   <!-- 日記記事1 -->
-  <article>
+  <article id="d2025-01-01">
     <h2>2025-01-01</h2>
     <p>
-      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなない。
+      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなかった。
     </p>
   </article>
 
   <!-- 日記記事2 -->
-  <article>
+  <article id="d2025-01-02">
     <h2>2025-01-02</h2>
     <p>
       朝から雨だったので家で読書。午後は近所を散歩して、カフェでコーヒーを飲んだ。日が短いので夕方には暗くなるが、のんびりできた。
@@ -26,14 +36,12 @@
   </article>
 
   <!-- 日記記事3 -->
-  <article>
+  <article id="d2025-01-03">
     <h2>2025-01-03</h2>
     <p>
-      午前中に買い物。昼食後に映画を観に行った。人が少なくて快適だった。夜は軽くジョギングして体を動かした。
+      午前中に買い物。昼食後に映画を観に行った。夜は軽くジョギングして体を動かした。
     </p>
   </article>
-
-  <!-- ここにさらに <article> を追加して日記を書き足せます -->
 
 </body>
 </html>
