--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>日記</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+/* ページ全体 */
+body {
+  font-family: "Yu Gothic", "Hiragino Kaku Gothic Pro", sans-serif;
+  background-color: #f9f8f7; /* tfukuo.comに近い背景色 */
+  margin: 0;
+  padding: 20px;
+  color: #3b3b3b; /* 本文の文字色 */
+  line-height: 1.8;
+  font-size: 19px; /* 読みやすい大きさ */
+}
 
-  <h1>日記</h1>
+/* ページタイトル */
+h1 {
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 32px;
+  color: #3b3b3b;
+}
 
-  <!-- 日記記事1 -->
-  <article>
-    <h2>2025-01-01</h2>
-    <p>
-      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなかった。
-    </p>
-  </article>
-
-  <!-- 日記記事2 -->
-  <article>
-    <h2>2025-01-02</h2>
-    <p>
-      朝から雨だったので家で読書。午後は近所を散歩して、カフェでコーヒーを飲んだ。
-    </p>
-  </article>
-
-  <!--
+/* 日記記事 */
+article {
+  margin-bottom: 40px;
+  max-width: 850px;   /* 幅を広めに */
+  margin-left: auto;
+  margin-right: auto;  /* ペ*
