--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>日記</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -9,27 +10,10 @@
 
   <h1>日記</h1>
 
-  <!-- 日記記事1 -->
   <article>
     <h2>2025-01-01</h2>
     <p>
-      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなかった。
-    </p>
-  </article>
-
-  <!-- 日記記事2 -->
-  <article>
-    <h2>2025-01-02</h2>
-    <p>
-      朝から雨だったので家で読書。午後は近所を散歩して、カフェでコーヒーを飲んだ。
-    </p>
-  </article>
-
-  <!-- 日記記事3 -->
-  <article>
-    <h2>2025-01-03</h2>
-    <p>
-      午前中に買い物。昼食後に映画を観に行った。夜は軽くジョギングして体を動かした。
+      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなかった。お節にはあまり興味がないが、数の子だけは食べたいと思っている。近所のスーパーを回るが、1人では食べきれない量のものしか売っていない。オオゼキで小さなパックに入ったものを見つけて、1,200円で買った。塩抜きが必要と書いてあって、ネットでやり方を調べた。
     </p>
   </article>
 
