--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
   <article>
     <h2>2025-01-01</h2>
     <p>
-      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。乾燥機は、量が多いと乾かなかった。お節にはあまり興味がないが、数の子だけは食べたいと思っている。近所のスーパーを回るが、1人では食べきれない量のものしか売っていない。オオゼキで小さなパックに入ったものを見つけて、1,200円で買った。塩抜きが必要と書いてあって、ネットでやり方を調べた。
+      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。
+    </p>
+  </article>
+
+  <article>
+    <h2>2025-01-02</h2>
+    <p>
+      朝から散歩。近所のカフェでコーヒーを飲んだ。天気が良くて気持ちよかった。
+    </p>
+  </article>
+
+  <article>
+    <h2>2025-01-03</h2>
+    <p>
+      午後は図書館で読書。久しぶりに集中できて楽しかった。帰りにスーパーで食材を買い、簡単な夕食を作った。
     </p>
   </article>
 
