--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日記</title>
-  <link rel="stylesheet" href="style.css">
-</head>
 <body>
+  <div class="container">
+    <h1>日記</h1>
 
-  <h1>日記</h1>
+    <article>
+      <h2>2025-01-01</h2>
+      <p>9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。</p>
+    </article>
 
-  <article>
-    <h2>2025-01-01</h2>
-    <p>
-      9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。
-    </p>
-  </article>
+    <article>
+      <h2>2025-01-02</h2>
+      <p>朝から散歩。近所のカフェでコーヒーを飲んだ。天気が良くて気持ちよかった。</p>
+    </article>
 
-  <article>
-    <h2>2025-01-02</h2>
-    <p>
-      朝から散歩。近所のカフェでコーヒーを飲んだ。天気が良くて気持ちよかった。
-    </p>
-  </article>
-
-  <article>
-    <h2>2025-01-03</h2>
-    <p>
-      午後は図書館で読書。久しぶりに集中できて楽しかった。帰りにスーパーで食材を買い、簡単な夕食を作った。
-    </p>
-  </article>
-
+    <article>
+      <h2>2025-01-03</h2>
+      <p>午後は図書館で読書。久しぶりに集中できて楽しかった。帰りにスーパーで食材を買い、簡単な夕食を作った。</p>
+    </article>
+  </div>
 </body>
-</html>
