--- a/index.html
+++ b/index.html
@@ -66,4 +66,19 @@
 
     <article>
       <h2>2025年1月1日（水）</h2>
-      <p>9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが
+      <p>9時ごろ起床。あまり寝れた感じがしなかった。ふるさと納税で注文したタオルが届いたので、使う前に洗濯機で洗った。</p>
+    </article>
+
+    <article>
+      <h2>2025年1月2日（木）</h2>
+      <p>朝から散歩。近所のカフェでコーヒーを飲んだ。天気が良くて気持ちよかった。</p>
+    </article>
+
+    <article>
+      <h2>2025年1月3日（金）</h2>
+      <p>午後は図書館で読書。久しぶりに集中できて楽しかった。帰りにスーパーで食材を買い、簡単な夕食を作った。</p>
+    </article>
+
+  </div>
+</body>
+</html>
