--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日記</title>
+  <title>日本のありふれた日記</title>
   <style>
     body {
       font-family: "Yu Gothic", "Hiragino Kaku Gothic Pro", sans-serif;
