--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>日記</h1>
+    <h1>日本のありふれた日記</h1>
 
     <!-- ========================= -->
     <!-- ▼ 新しい記事を追加する方法 ▼ -->
