--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日本のありふれた日記</title>
+  <title>ありふれた日記</title>
   <style>
     body {
       font-family: "Yu Gothic", "Hiragino Kaku Gothic Pro", sans-serif;
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>日本のありふれた日記</h1>
+    <h1>ありふれた日記</h1>
 
     <!-- ========================= -->
     <!-- ▼ 新しい記事を追加する方法 ▼ -->
